syntax = "proto3";

package Juicy;

service DBCommand {
  rpc CommandRPC (CommandReq) returns (CommandResp) {}
}

message CommandReq {
    enum Command {
        Set = 0;
        Get = 1;
        Have = 2;
        Empty = 3;
        Clear = 4;
        Delete = 5;
        Persist = 6;
    }
    Command command = 1;
    string key = 2;
    string value = 3;
    string filename = 4;
}

message CommandResp {
    bool success = 1;
    string error = 2;
    bool empty = 3;
    bool have = 4;
    string value = 5; 
}